<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/field_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:hint="@string/field1_hint"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/field_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:hint="@string/field2_hint"
        android:inputType="numberDecimal|numberSigned" />

    <RadioGroup
        android:id="@id/operations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/operation_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

        <RadioButton
            android:id="@+id/operation_minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minus" />

        <RadioButton
            android:id="@+id/operation_divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divide" />

        <RadioButton
            android:id="@+id/operation_multiple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiple" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/float_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:checked="true"
        android:text="@string/float_values" />

    <CheckBox
        android:id="@+id/singed_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:checked="true"
        android:text="@string/singed_values" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:hint="@string/result" />

    <Button
        android:id="@+id/calculate_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:onClick="calculateResult"
        android:text="@string/calculate_result" />

</LinearLayout>